Changed URL of UN Comtrade URL API

--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,9 +225,6 @@
     "df_chart_gdp[['date', 'GDP growth (%)'] + [f'{item} (contribution, pp)' for item in production_components]].\\\n",
     "to_excel(writer, sheet_name='GDP-production', index=False)\n",
     "\n",
-    "# Close the Pandas Excel writer and output the Excel file\n",
-    "writer.save()\n",
-    "\n",
     "# Create a blank canvas\n",
     "fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(10, 5))\n",
     "plt.style.use('default')\n",
@@ -241,7 +238,7 @@
     "\n",
     "# Create a line plot of the GDP growth series\n",
     "for i in range(len(axs)):\n",
-    "    axs[i].plot(df_chart_gdp_demand.loc[:, 'GDP growth (%)'], lw=2.5, marker='D', markersize=10, \n",
+    "    axs[i].plot(df_chart_gdp.loc[:, 'GDP growth (%)'], lw=2.5, marker='D', markersize=10, \n",
     "        color='black')\n",
     "    # Set labels in the x-axis\n",
     "    axs[i].set_xticklabels(df_chart_gdp.date, rotation=0)\n",
@@ -269,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,58 +371,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the dataframe that will be plotted\n",
-    "df_chart_inflation = pd.DataFrame(df_all['Inflation rate (%)'].last('5Y'))\n",
-    "df_chart_inflation.index = df_chart_inflation.index.year\n",
-    "df_chart_inflation.reset_index(inplace=True)\n",
+    "df_chart_inf_cab = pd.DataFrame(df_all[['Inflation rate (%)', 'Current account balance (% of GDP)']].\\\n",
+    "                                last('5Y'))\n",
+    "df_chart_inf_cab.index = df_chart_inf_cab.index.year\n",
+    "df_chart_inf_cab.reset_index(inplace=True)\n",
     "\n",
     "# Create a Pandas Excel writer using xlsxwriter as the engine\n",
-    "df_chart_inflation.to_excel(writer, sheet_name='Inflation', index=False)\n",
+    "inf_cab = ['Inflation rate (%)', 'Current account balance (% of GDP)']\n",
+    "for item in inf_cab:\n",
+    "    df_chart_inf_cab[['date', f'{item}']].to_excel(writer, sheet_name=f'{item[:31]}', index=False)\n",
     "\n",
     "# Close the Pandas Excel writer and output the Excel file\n",
     "writer.save()\n",
     "\n",
     "# Create a blank canvas\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(10, 5))\n",
     "plt.style.use('default')\n",
     "\n",
-    "# Create a bar chart of inflation\n",
-    "df_chart_inflation['Inflation rate (%)'].plot(kind='bar', ax=ax)\n",
+    "# Create a bar chart of inflation and CAB\n",
+    "df_chart_inf_cab['Inflation rate (%)'].plot(kind='bar', ax=axs[0])\n",
+    "df_chart_inf_cab['Current account balance (% of GDP)'].plot(kind='bar', ax=axs[1])\n",
     "\n",
     "# Set graph formatting\n",
-    "ax.set_title('Inflation rate (%)')\n",
-    "ax.set_xticklabels(df_chart_inflation.date, rotation=0)\n",
-    "ax.set_xlabel('')\n",
-    "ax.axes.get_yaxis().set_visible(False)\n",
-    "plt.xticks(rotation=0)\n",
+    "for i in range(len(axs)):\n",
+    "    axs[i].set_xticklabels(df_chart_inf_cab.date, rotation=0)\n",
+    "    axs[i].set_xlabel('')\n",
+    "    axs[i].axes.get_yaxis().set_visible(False)\n",
     "\n",
-    "# Set data labels\n",
-    "labels = df_chart_inflation['Inflation rate (%)']\n",
+    "axs[0].set_title('Inflation rate (%)')\n",
+    "axs[1].set_title('Current account balance (% of GDP)')\n",
     "\n",
-    "rects = ax.patches\n",
+    "# Set data labels for inflation\n",
+    "labels_inf = df_chart_inf_cab['Inflation rate (%)']\n",
+    "rects_inf = axs[0].patches\n",
     "\n",
-    "for rect, label in zip(rects, labels):\n",
+    "for rect, label in zip(rects_inf, labels_inf):\n",
     "    height = rect.get_height()\n",
-    "    ax.text(rect.get_x() + rect.get_width() / 2, height, str(label) + '%',\n",
-    "            ha='center', va='bottom')\n",
+    "    axs[0].text(rect.get_x() + rect.get_width() / 2, height, str(label) + '%',\n",
+    "                ha='center', va='bottom')\n",
+    "    \n",
+    "# Set data labels for CAB\n",
+    "labels_cab = df_chart_inf_cab['Current account balance (% of GDP)']\n",
+    "rects_cab = axs[1].patches\n",
+    "\n",
+    "for rect, label in zip(rects_cab, labels_cab):\n",
+    "    height = rect.get_height()\n",
+    "    axs[1].text(rect.get_x() + rect.get_width() / 2, height, str(label) + '%',\n",
+    "                ha='center', va='bottom')\n",
     "\n",
     "# Save to local folder\n",
-    "plt.savefig(f'{country}_inflation.png')\n",
+    "plt.savefig(f'{country}_inflation_cab.png')\n",
     "plt.close()\n",
     "\n",
     "# Add picture to the document\n",
-    "graph = doc.add_picture(f'{country}_inflation.png', width=Cm(10), height=Cm(7))\n",
+    "graph = doc.add_picture(f'{country}_inflation_cab.png', width=Cm(14), height=Cm(7))\n",
     "last_paragraph = doc.paragraphs[-1]\n",
     "last_paragraph.alignment = WD_ALIGN_PARAGRAPH.CENTER"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,35 +458,38 @@
     "                      style='List Number')\n",
     "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
     "\n",
-    "url_destination = f\"https://comtrade.un.org/api/get?max=100000&type=C&freq=A&px=HS&ps={dt.date.today().year - 1}&r={country_codes.comtrade_code[country]}&p=all&rg=2&cc=TOTAL&uitoken=bdd79e4a17318d1a20fa8bb8eee0b328&fmt=csv\"\n",
+    "url_destination = f\"https://comtrade.un.org/api/get/plus?max=100000&type=C&freq=A&px=HS&ps={dt.date.today().year - 1}&r={country_codes.comtrade_code[country]}&p=all&rg=2&cc=TOTAL&uitoken=7ba6aab86a7be1557d3193f1fda32682&fmt=csv\"\n",
     "df_destination = pd.read_csv(url_destination)\n",
-    "total_exports = df_destination[df_destination['Partner']=='World'].at[0, 'Trade Value (US$)']\n",
+    "total_exports = df_destination[df_destination['Partner']=='World'].loc[:, 'Trade Value (US$)'].values[0]\n",
     "df_destination = df_destination.assign(share=lambda x: (x['Trade Value (US$)'] / total_exports * 100).round(1))\n",
-    "top_destination = df_destination.iloc[1:, :].sort_values(by='share', ascending=False)[['Partner', 'share']].head(5).reset_index(drop=True)\n",
+    "top_destination = df_destination.sort_values(by='share', ascending=False)[['Partner', 'share']].reset_index(drop=True).iloc[1:6, :]\n",
     "\n",
-    "url_origin = f\"https://comtrade.un.org/api/get?max=100000&type=C&freq=A&px=HS&ps={dt.date.today().year - 1}&r={country_codes.comtrade_code[country]}&p=all&rg=1&cc=TOTAL&uitoken=bdd79e4a17318d1a20fa8bb8eee0b328&fmt=csv\"\n",
+    "url_origin = f\"https://comtrade.un.org/api/get/plus?max=100000&type=C&freq=A&px=HS&ps={dt.date.today().year - 1}&r={country_codes.comtrade_code[country]}&p=all&rg=1&cc=TOTAL&uitoken=7ba6aab86a7be1557d3193f1fda32682&fmt=csv\"\n",
     "df_origin = pd.read_csv(url_origin)\n",
-    "total_imports = df_origin[df_origin['Partner']=='World'].at[0, 'Trade Value (US$)']\n",
+    "total_imports = df_origin[df_origin['Partner']=='World'].loc[:, 'Trade Value (US$)'].values[0]\n",
     "df_origin = df_origin.assign(share=lambda x: (x['Trade Value (US$)'] / total_imports * 100).round(1))\n",
-    "top_origin = df_origin.iloc[1:, :].sort_values(by='share', ascending=False)[['Partner', 'share']].head(5).reset_index(drop=True)\n",
+    "top_origin = df_origin.sort_values(by='share', ascending=False)[['Partner', 'share']].reset_index(drop=True).iloc[1:6, :]\n",
     "\n",
-    "url_exports = f\"https://comtrade.un.org/api/get/plus?max=100000&type=C&freq=A&px=HS&ps={dt.date.today().year - 1}&r={country_codes.comtrade_code[country]}&p=0&rg=2&cc=AG2&uitoken=bdd79e4a17318d1a20fa8bb8eee0b328&fmt=csv\"\n",
+    "url_exports = f\"https://comtrade.un.org/api/get/plus?max=100000&type=C&freq=A&px=HS&ps={dt.date.today().year - 1}&r={country_codes.comtrade_code[country]}&p=0&rg=2&cc=AG2&uitoken=7ba6aab86a7be1557d3193f1fda32682&fmt=csv\"\n",
     "df_exports = pd.read_csv(url_exports)\n",
     "df_exports = df_exports.assign(share=lambda x: (x['Trade Value (US$)'] / total_exports * 100).round(1))\n",
     "top_exports = df_exports.iloc[1:, :].sort_values(by='share', ascending=False)[['Commodity', 'share']].head(5).reset_index(drop=True)\n",
     "\n",
-    "url_imports = f\"https://comtrade.un.org/api/get/plus?max=100000&type=C&freq=A&px=HS&ps={dt.date.today().year - 1}&r={country_codes.comtrade_code[country]}&p=0&rg=1&cc=AG2&uitoken=bdd79e4a17318d1a20fa8bb8eee0b328&fmt=csv\"\n",
+    "url_imports = f\"https://comtrade.un.org/api/get/plus?max=100000&type=C&freq=A&px=HS&ps={dt.date.today().year - 1}&r={country_codes.comtrade_code[country]}&p=0&rg=1&cc=AG2&uitoken=7ba6aab86a7be1557d3193f1fda32682&fmt=csv\"\n",
     "df_imports = pd.read_csv(url_imports)\n",
     "df_imports = df_imports.assign(share=lambda x: (x['Trade Value (US$)'] / total_imports * 100).round(1))\n",
     "top_imports = df_imports.iloc[1:, :].sort_values(by='share', ascending=False)[['Commodity', 'share']].head(5).reset_index(drop=True)\n",
     "\n",
-    "p = doc.add_paragraph(f\"Top merchandise exports: Top exports destinations in {dt.date.today().year - 1} are \\\n",
+    "p = doc.add_paragraph(f\"Top exports partners: Top exports destinations in {dt.date.today().year - 1} are \\\n",
     "{top_destination['Partner'].values[0]} ({top_destination['share'].values[0]}% of total exports), \\\n",
     "{top_destination['Partner'].values[1]} ({top_destination['share'].values[1]}%), \\\n",
     "{top_destination['Partner'].values[2]} ({top_destination['share'].values[2]}%), \\\n",
     "{top_destination['Partner'].values[3]} ({top_destination['share'].values[3]}%),  and \\\n",
-    "{top_destination['Partner'].values[4]} ({top_destination['share'].values[4]}%). \\\n",
-    "Top export commodities include \\\n",
+    "{top_destination['Partner'].values[4]} ({top_destination['share'].values[4]}%).\",\n",
+    "                      style='List Number')\n",
+    "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
+    "\n",
+    "p = doc.add_paragraph(f\"Top export commodities: Top export commodities include \\\n",
     "{top_exports['Commodity'].values[0].lower()} ({top_exports['share'].values[0]}% of total exports), \\\n",
     "{top_exports['Commodity'].values[1].lower()} ({top_exports['share'].values[1]}%), \\\n",
     "{top_exports['Commodity'].values[2].lower()} ({top_exports['share'].values[2]}%), \\\n",
@@ -484,13 +498,16 @@
     "                      style='List Number')\n",
     "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
     "\n",
-    "p = doc.add_paragraph(f\"Top merchandise imports: Top imports destinations in {dt.date.today().year - 1} are \\\n",
+    "p = doc.add_paragraph(f\"Top imports partners: Top imports origins in {dt.date.today().year - 1} are \\\n",
     "{top_origin['Partner'].values[0]} ({top_origin['share'].values[0]}% of total imports), \\\n",
     "{top_origin['Partner'].values[1]} ({top_origin['share'].values[1]}%), \\\n",
     "{top_origin['Partner'].values[2]} ({top_origin['share'].values[2]}%), \\\n",
     "{top_origin['Partner'].values[3]} ({top_origin['share'].values[3]}%),  and \\\n",
-    "{top_origin['Partner'].values[4]} ({top_origin['share'].values[4]}%). \\\n",
-    "Top import commodities include \\\n",
+    "{top_origin['Partner'].values[4]} ({top_origin['share'].values[4]}%).\",\n",
+    "                      style='List Number')\n",
+    "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
+    "\n",
+    "p = doc.add_paragraph(f\"Top import commodities include \\\n",
     "{top_imports['Commodity'].values[0].lower()} ({top_imports['share'].values[0]}% of total imports), \\\n",
     "{top_imports['Commodity'].values[1].lower()} ({top_imports['share'].values[1]}%), \\\n",
     "{top_imports['Commodity'].values[2].lower()} ({top_imports['share'].values[2]}%), \\\n",
@@ -502,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,49 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_reserves.iloc[:, 1] = df_reserves.iloc[:, 1] / 1e9\n",
-    "\n",
-    "# # Round values to one decimal place\n",
-    "# df_reserves = df_reserves.round(1)\n",
-    "\n",
-    "# # Set placeholders\n",
-    "# reserves_latest = df_reserves.iat[-1, 1]\n",
-    "# reserves_imports_latest = df_reserves.iat[-1, 2]\n",
-    "# strong, weak = reserves_imports_latest >= 12, reserves_imports_latest < 12\n",
-    "# f_string = 'strong' if strong else 'weak'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 556,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Manually input Consensus Forecast parameters\n",
-    "# CF_date = 'October 23, 2020'\n",
-    "# CF_gdp_latest = -4.047\n",
-    "# CF_gdp_next = 2.999\n",
-    "# increase_latest, contract_latest = CF_gdp_latest > 0, CF_gdp_latest < 0\n",
-    "# increase_next, contract_next = CF_gdp_next > 0, CF_gdp_next < 0\n",
-    "# f_string_latest = 'increase' if increase_latest else 'contract'\n",
-    "# f_string_next = ''\n",
-    "# if CF_gdp_latest < 0 and CF_gdp_next < 0:\n",
-    "#     f_string_next = 'further contract'\n",
-    "# elif CF_gdp_latest > 0 and CF_gdp_next < 0:\n",
-    "#     f_string_next = 'contract'\n",
-    "# elif CF_gdp_latest < 0 and CF_gdp_next > 0:\n",
-    "#     f_string_next = 'bounce back'\n",
-    "# elif CF_gdp_latest > 0 and CF_gdp_next > 0:\n",
-    "#     f_string_next = 'further increase'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
