Add Haver API to extract high-frequency data

--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
     "                               index=['RUS', 'ARM', 'AZE', 'GEO', 'KAZ', 'KGZ', 'TAJ', 'TKM', 'UZB',\n",
     "                                      'HKG', 'MON', 'PRC', 'KOR', 'TAP', 'AFG', 'BAN', 'BHU', 'IND',\n",
     "                                      'MLD', 'NEP', 'PAK', 'SRI', 'BRU', 'CAM', 'INO', 'LAO', 'MAL',\n",
-    "                                      'MYA', 'PHI', 'SIN', 'THA', 'TLS', 'VIE', 'COK', 'FIJ', 'KIR',\n",
+    "                                      'MYA', 'PHI', 'SIN', 'THA', 'TIM', 'VIE', 'COO', 'FIJ', 'KIR',\n",
     "                                      'MHL', 'NAU', 'NIU', 'PAL', 'PNG', 'SAM', 'SOL', 'TON', 'TUV',\n",
     "                                      'VAN'],\n",
     "                             dtype='int64')"
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,14 +523,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a list of CECL country codes\n",
+    "adb_country_codes = ['AFG', 'ARM', 'AZE', 'BAN', 'BHU', 'BRU', 'CAM', 'PRC', 'FIJ', 'HKG', 'GEO', 'IND',\n",
+    "                     'INO', 'KAZ', 'KIR', 'KGZ', 'KOR', 'LAO', 'MLD', 'RMI', 'FSM', 'MON', 'MYA', 'NEP', \n",
+    "                     'PAK', 'PAL', 'PNG', 'PHI', 'SAM', 'SOL', 'SRI', 'TAJ', 'TAP', 'THA', 'TIM', 'TON', \n",
+    "                     'TKM', 'TUV', 'UZB', 'VAN', 'VIE', 'RUS', 'MAL', 'SIN', 'COO', 'RMI', 'NAU', 'NIU']\n",
+    "\n",
+    "# Create a list of Haver country codes\n",
+    "haver_country_codes = ['512', '911', '912', '513', '514', '516', '522', '924', '819', '532', '915', \n",
+    "                       '534', '536', '916', '826', '917', '542', '544', '556', '867', '868', '948', \n",
+    "                       '518', '558', '564', '565', '853', '566', '862', '813', '524', '923', '528',\n",
+    "                       '578', '537', '866', '925', '869', '927', '846', '582', '922', '548', '576', \n",
+    "                       np.nan, '867', np.nan, np.nan]\n",
+    "\n",
+    "haver_codes = pd.DataFrame(haver_country_codes, index=adb_country_codes, columns=['haver_code'])\n",
+    "country_codes = country_codes.join(haver_codes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import Haver\n",
+    "consumer_codes = ['VCC', 'VCE']\n",
+    "consumer_names = ['Consumer confidence index (NSA, % balance)', \n",
+    "                  'Consumer expectations index (NSA, % balance)']\n",
+    "consumer_country = [country_codes.haver_code[country] + item for item in consumer_codes]\n",
+    "consumer_indicators = ['N' + item for item in consumer_country]\n",
+    "df_consumer = Haver.data(consumer_indicators, database='EMERGE', dates=True)\n",
+    "df_consumer.columns = consumer_names\n",
+    "\n",
+    "production_codes =  ['D', 'DM', 'DN', 'DVW', 'DVU']\n",
+    "production_names = ['Industrial production (index)', 'Manufacturing (index)',\n",
+    "                    'Mining and quarrying (index)', \n",
+    "                    'Water supply, sewerage, waste management & remediation (index)', \n",
+    "                    'Electricity, gas, steam and air conditioning supply (index)']\n",
+    "production_country = [country_codes.haver_code[country] + item for item in production_codes]\n",
+    "production_indicators = ['S' + item for item in production_country]\n",
+    "df_production = Haver.data(production_indicators, database='EMERGE', dates=True)\n",
+    "\n",
+    "policyrate_codes = ['RTAR']\n",
+    "policyrate_names = ['Policy rate (EOP, %)']\n",
+    "policyrate_country = [country_codes.haver_code[country] + item for item in policyrate_codes]\n",
+    "policyrate_indicators = ['N' + item for item in policyrate_country]\n",
+    "df_policyrate = Haver.data(policyrate_indicators, database='EMERGE', dates=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Write the section on Outlook\n",
     "\n",
     "# Add a heading for the Outlook section\n",
     "doc.add_heading('Outlook', level=1)\n",
     "\n",
+    "# Set placeholders\n",
+    "change_confidence = ''\n",
+    "if df_consumer[f'Consumer confidence index (NSA, % balance)'].last('5Q').values[-1] > \\\n",
+    "df_consumer[f'Consumer confidence index (NSA, % balance)'].last('5Q').values[-5]:\n",
+    "    change_confidence = random.choice(['improved', 'increased', 'jumped'])\n",
+    "elif df_consumer[f'Consumer confidence index (NSA, % balance)'].last('5Q').values[-1] == \\\n",
+    "df_consumer[f'Consumer confidence index (NSA, % balance)'].last('5Q').values[-5]:\n",
+    "    change_confidence = random.choice(['remained at', 'stayed at'])\n",
+    "else:\n",
+    "    change_confidence = random.choice(['worsened', 'declined', 'contracted'])\n",
+    "    \n",
+    "# Set placeholders\n",
+    "change_expectations = ''\n",
+    "if df_consumer[f'Consumer expectations index (NSA, % balance)'].last('5Q').values[-1] > \\\n",
+    "df_consumer[f'Consumer expectations index (NSA, % balance)'].last('5Q').values[-5]:\n",
+    "    change_expectations = random.choice(['improved', 'increased', 'jumped'])\n",
+    "elif df_consumer[f'Consumer expectations index (NSA, % balance)'].last('5Q').values[-1] == \\\n",
+    "df_consumer[f'Consumer expectations index (NSA, % balance)'].last('5Q').values[-5]:\n",
+    "    change_expectations = random.choice(['remained at', 'stayed at'])\n",
+    "else:\n",
+    "    change_expectations = random.choice(['worsened', 'declined', 'contracted'])\n",
+    "    \n",
     "# Add a paragraph on Confidence index\n",
-    "p = doc.add_paragraph('Confidence index', style='List Number')\n",
+    "p = doc.add_paragraph(f\"Consumer confidence: Consumer confidence index {change_confidence} to \\\n",
+    "{df_consumer[f'Consumer confidence index (NSA, % balance)'].last('5Q').values[-1]}%  in \\\n",
+    "{df_consumer.last('5Q').index[-1].strftime('%Y-%m-%d')} from \\\n",
+    "{df_consumer[f'Consumer confidence index (NSA, % balance)'].last('5Q').values[-5]}% \\\n",
+    "in the same quarter in the previous year. In addition, consumer expectations index \\\n",
+    "{change_expectations} to \\\n",
+    "{df_consumer[f'Consumer expectations index (NSA, % balance)'].last('5Q').values[-1]}% from \\\n",
+    "{df_consumer[f'Consumer expectations index (NSA, % balance)'].last('5Q').values[-5]}%.\", \n",
+    "                          style='List Number')\n",
     "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
+    "\n",
+    "\n",
     "\n",
     "# Add a paragraph on Monetary policy, FX, Inflation\n",
     "p = doc.add_paragraph('FX reserves', style='List Number')\n",
