Restructure CAB analysis

--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +101,10 @@
     "df_retail = Haver.data(retail_indicators, database='emerge', dates=True)\n",
     "if type(df_retail) is not dict:\n",
     "    df_retail = df_retail[[item for item in df_retail.columns if item.startswith('h')]]\n",
+    "    df_retail = (df_retail.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
+    "    df_retail.columns = [retail_codes[item[-3:]] for item in df_retail.columns]\n",
+    "elif df_retail['codelists']['codesfound']:\n",
+    "    df_retail = Haver.data(df_retail['codelists']['codesfound'], dates=True)\n",
     "    df_retail = (df_retail.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
     "    df_retail.columns = [retail_codes[item[-3:]] for item in df_retail.columns]\n",
     "\n",
@@ -164,13 +168,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Scrape data from the World Bank API (country in [] because want to access the 'RUS' row in country_codes DF, alternative to iat, etc.)\n",
-    "df_all = wb.get_dataframe(indicators=all_indicators, country=country_codes.iso_code[country], data_date=data_date, source=2,\n",
-    "                          convert_date=True)\n",
+    "df_all = wb.get_dataframe(indicators=all_indicators, country=country_codes.iso_code[country], data_date=data_date, convert_date=True)\n",
     "\n",
     "# Sort data by year # Syntax: {} = dictionary; [] = list; () = arguments for functions\n",
     "df_all = df_all.sort_index() \n",
@@ -234,11 +237,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-22-57013457d70d>, line 1)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-22-57013457d70d>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    Create blank .docx where the output will be exported\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "# Create blank .docx where the output will be exported\n",
+    "#Create blank .docx where the output will be exported\n",
     "doc = docx.Document()\n",
     "\n",
     "# Add title (heading level 0)\n",
@@ -326,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,22 +602,22 @@
     "df_imports = df_imports.assign(share=lambda x: (x['Trade Value (US$)'] / total_imports * 100).round(1))\n",
     "top_imports = df_imports.sort_values(by='share', ascending=False)[['Commodity', 'share']].reset_index(drop=True).head(5)\n",
     "\n",
-    "p = doc.add_paragraph(f\"{top_destination['Partner'].values[0]} is the country's top export destination accounting for {top_destination['share'].values[0]}% of total exports in {dt.date.today().year - 1}. Other major exports partners include {top_destination['Partner'].values[1]} ({top_destination['share'].values[1]}%), {top_destination['Partner'].values[2]} ({top_destination['share'].values[2]}%), {top_destination['Partner'].values[3]} ({top_destination['share'].values[3]}%), and {top_destination['Partner'].values[4]} ({top_destination['share'].values[4]}%).\")\n",
+    "p = doc.add_paragraph(f\"{top_destination['Partner'].values[0]} is the country's top export destination accounting for {top_destination['share'].values[0]}% of total exports in {dt.date.today().year - 1}. Other major exports partners include {top_destination['Partner'].values[1]} ({top_destination['share'].values[1]}%), {top_destination['Partner'].values[2]} ({top_destination['share'].values[2]}%), {top_destination['Partner'].values[3]} ({top_destination['share'].values[3]}%), and {top_destination['Partner'].values[4]} ({top_destination['share'].values[4]}%). Top export commodities are {top_exports['Commodity'].values[0].lower()}, accounting for {top_exports['share'].values[0]}% of total exports.\")\n",
     "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
     "\n",
-    "p = doc.add_paragraph(f\"Top export commodities include {top_exports['Commodity'].values[0].lower()} ({top_exports['share'].values[0]}% of total exports), {top_exports['Commodity'].values[1].lower()} ({top_exports['share'].values[1]}%), {top_exports['Commodity'].values[2].lower()} ({top_exports['share'].values[2]}%), {top_exports['Commodity'].values[3].lower()} ({top_exports['share'].values[3]}%), and {top_exports['Commodity'].values[4].lower()} ({top_exports['share'].values[4]}%).\")\n",
+    "# p = doc.add_paragraph(f\"Top export commodities include {top_exports['Commodity'].values[0].lower()} ({top_exports['share'].values[0]}% of total exports), {top_exports['Commodity'].values[1].lower()} ({top_exports['share'].values[1]}%), {top_exports['Commodity'].values[2].lower()} ({top_exports['share'].values[2]}%), {top_exports['Commodity'].values[3].lower()} ({top_exports['share'].values[3]}%), and {top_exports['Commodity'].values[4].lower()} ({top_exports['share'].values[4]}%).\")\n",
+    "# p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
+    "\n",
+    "p = doc.add_paragraph(f\"For imports, top imports origin in {dt.date.today().year - 1} is {top_origin['Partner'].values[0]} ({top_origin['share'].values[0]}% of total imports), followed by {top_origin['Partner'].values[1]} ({top_origin['share'].values[1]}%), {top_origin['Partner'].values[2]} ({top_origin['share'].values[2]}%), {top_origin['Partner'].values[3]} ({top_origin['share'].values[3]}%),  and {top_origin['Partner'].values[4]} ({top_origin['share'].values[4]}%). Major import commodities are {top_imports['Commodity'].values[0].lower()}, accounting for {top_imports['share'].values[0]}% of total imports.\")\n",
     "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
     "\n",
-    "p = doc.add_paragraph(f\"For imports, top imports origin in {dt.date.today().year - 1} is {top_origin['Partner'].values[0]} ({top_origin['share'].values[0]}% of total imports), followed by {top_origin['Partner'].values[1]} ({top_origin['share'].values[1]}%), {top_origin['Partner'].values[2]} ({top_origin['share'].values[2]}%), {top_origin['Partner'].values[3]} ({top_origin['share'].values[3]}%),  and {top_origin['Partner'].values[4]} ({top_origin['share'].values[4]}%).\")\n",
-    "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
-    "\n",
-    "p = doc.add_paragraph(f\"Major import commodities include {top_imports['Commodity'].values[0].lower()} ({top_imports['share'].values[0]}% of total imports), {top_imports['Commodity'].values[1].lower()} ({top_imports['share'].values[1]}%), {top_imports['Commodity'].values[2].lower()} ({top_imports['share'].values[2]}%), {top_imports['Commodity'].values[3].lower()} ({top_imports['share'].values[3]}%),  and {top_imports['Commodity'].values[4].lower()} ({top_imports['share'].values[4]}%).\")\n",
-    "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY"
+    "# p = doc.add_paragraph(f\"Major import commodities include {top_imports['Commodity'].values[0].lower()} ({top_imports['share'].values[0]}% of total imports), {top_imports['Commodity'].values[1].lower()} ({top_imports['share'].values[1]}%), {top_imports['Commodity'].values[2].lower()} ({top_imports['share'].values[2]}%), {top_imports['Commodity'].values[3].lower()} ({top_imports['share'].values[3]}%),  and {top_imports['Commodity'].values[4].lower()} ({top_imports['share'].values[4]}%).\")\n",
+    "# p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +641,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'databasepath': 'c:\\\\DLX\\\\DATA',\n",
+       " 'querydateandtime': '2020-11-23 11:02:58',\n",
+       " 'codelists': {'codesfound': [],\n",
+       "  'databaseaccess': [],\n",
+       "  'codesnotfound': ['emerge:n566trs', 'emerge:h566trs'],\n",
+       "  'metadataaccess': []}}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 51
+    }
+   ],
+   "source": [
+    "df_retail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,6 +812,13 @@
     "# Save the .docx file into the local folder\n",
     "doc.save(f'{country} ADO Quick Report.docx')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
