--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "gdp_growth_quarterly_codes = {'ngpc': 'GDP growth', \n",
     "                              'ncpc': 'Private consumption',\n",
-    "                              'ncgc': 'Government expenditures',\n",
+    "                              'ncgc': 'Government expenditure',\n",
     "                              'nfbc': 'Gross capital formation',\n",
     "                              'nxnc': 'Net exports'}\n",
     "gdp_growth_quarterly_country = [str(country_codes.haver_code[country]) + item for item in gdp_growth_quarterly_codes.keys()]\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,18 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-22-57013457d70d>, line 1)",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-22-57013457d70d>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    Create blank .docx where the output will be exported\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Create blank .docx where the output will be exported\n",
     "doc = docx.Document()\n",
@@ -338,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +513,7 @@
     "    if height > 0:\n",
     "        axs[0].text(rect.get_x() + rect.get_width() / 2, height, str(label) + '%', ha='center', va='bottom')\n",
     "    else:\n",
-    "        axs[0].text(rect.get_x() + rect.get_width() / 2, height, str(label) + '%', ha='center', va='bottom')\n",
+    "        axs[0].text(rect.get_x() + rect.get_width() / 2, height - 0.1, str(label) + '%', ha='center', va='bottom')\n",
     "\n",
     "# Set data labels for inflation\n",
     "labels_inf = df_chart_phillips['Inflation rate (%)']\n",
@@ -533,7 +524,7 @@
     "    if height > 0:\n",
     "        axs[1].text(rect.get_x() + rect.get_width() / 2, height, str(label) + '%', ha='center', va='bottom')\n",
     "    else:\n",
-    "        axs[1].text(rect.get_x() + rect.get_width() / 2, height, str(label) + '%', ha='center', va='bottom')\n",
+    "        axs[1].text(rect.get_x() + rect.get_width() / 2, height  - 0.1, str(label) + '%', ha='center', va='bottom')\n",
     "    \n",
     "# Save to local folder\n",
     "plt.savefig(f'{country}_unemployment_inflation.png')\n",
@@ -547,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,56 +608,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if type(df_gdp_growth_quarterly) is not dict:\n",
-    "    change = {}\n",
-    "    for item in df_gdp_growth_quarterly.columns:\n",
-    "        # Set placeholders\n",
-    "        if df_gdp_growth_quarterly[f'{item}'].last('2Q').values[-1] > df_gdp_growth_quarterly[f'{item}'].last('2Q').values[-2]:\n",
-    "            change[f'{item}'] = random.choice(['improved', 'increased', 'jumped'])\n",
-    "        elif df_gdp_growth_quarterly[f'{item}'].last('2Q').values[-1] == df_gdp_growth_quarterly[f'{item}'].last('2Q').values[-2]:\n",
-    "            change[f'{item}'] = random.choice(['kept still', 'stayed flat'])\n",
-    "        else:\n",
-    "            change[f'{item}'] = random.choice(['worsened', 'declined', 'fell'])\n",
-    "    p = doc.add_heading(f\"Output {'contracted' if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1] < 0 else 'expanded'} in Q{df_gdp_growth_quarterly.last('2Q').index[-1].quarter} {df_gdp_growth_quarterly.last('2Q').index[-1].year}\", level=1)\n",
-    "    p = doc.add_paragraph(f\"Output {'plunged' if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1] < 0 else 'jumped'} by {abs(df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1])}% in Q{df_gdp_growth_quarterly.last('2Q').index[-1].quarter} of {df_gdp_growth_quarterly.last('2Q').index[-1].year}. Growth in overall economic activity {change['GDP growth']} from {'a contraction of ' + str(abs(df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2])) if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2] < 0 else df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2]}% in the previous quarter.\")\n",
-    "    for item in demand_components:\n",
-    "        if item in df_gdp_growth_quarterly.columns:\n",
-    "            p.add_run(f\" {item} growth {change[item]} from {df_gdp_growth_quarterly[item].last('2Q').values[-2]}% to {df_gdp_growth_quarterly[item].last('2Q').values[-1]}%.\")\n",
-    "    p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'databasepath': 'c:\\\\DLX\\\\DATA',\n",
-       " 'querydateandtime': '2020-11-23 11:02:58',\n",
-       " 'codelists': {'codesfound': [],\n",
-       "  'databaseaccess': [],\n",
-       "  'codesnotfound': ['emerge:n566trs', 'emerge:h566trs'],\n",
-       "  'metadataaccess': []}}"
+       "{'GDP growth': 'contracted',\n",
+       " 'Private consumption': 'declined',\n",
+       " 'Government expenditure': 'increased',\n",
+       " 'Gross capital formation': 'declined',\n",
+       " 'Net exports': 'declined'}"
       ]
      },
      "metadata": {},
-     "execution_count": 51
+     "execution_count": 52
     }
    ],
    "source": [
-    "df_retail"
+    "change"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if type(df_gdp_growth_quarterly) is not dict:\n",
+    "    change = {}\n",
+    "    for item in df_gdp_growth_quarterly.columns:\n",
+    "        if df_gdp_growth_quarterly[item].last('2Q').values[-1] > 0:\n",
+    "            change[f'{item}'] = random.choice(['expanded', 'grew', 'increased', 'picked up', 'jumped'])\n",
+    "        else:\n",
+    "            change[f'{item}'] = random.choice(['decreased', 'contracted', 'shrank', 'declined', 'plunged'])\n",
+    "    \n",
+    "    # Create dataframe for top growth rates of GDP components on the demand side\n",
+    "    top_demand_growth_quarterly = df_gdp_growth_quarterly.last('Q')[[item for item in demand_components]].transpose().sort_values(by=df_gdp_growth_quarterly.last('Q').index[0], ascending=False)\n",
+    "\n",
+    "    p = doc.add_heading(f\"Output {'contracted' if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1] < 0 else 'expanded'} in Q{df_gdp_growth_quarterly.last('2Q').index[-1].quarter} {df_gdp_growth_quarterly.last('2Q').index[-1].year}\", level=1)\n",
+    "    p = doc.add_paragraph(f\"Output {'plunged' if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1] < 0 else 'jumped'} by {abs(df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1])}% year-on-year in Q{df_gdp_growth_quarterly.last('2Q').index[-1].quarter} of {df_gdp_growth_quarterly.last('2Q').index[-1].year}. Growth in overall economic activity {'improved' if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1] > df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2] else 'worsened'} from {'a contraction of ' + str(abs(df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2])) if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2] < 0 else df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2]}% in the previous quarter. {top_demand_growth_quarterly.index[0]} {change[top_demand_growth_quarterly.index[0]]} by the biggest margin at {top_demand_growth_quarterly.values.max()}% annual growth.\")\n",
+    "\n",
+    "    i = 1\n",
+    "    while top_demand_growth_quarterly.values[i][0] > 0:\n",
+    "        p.add_run(f\" {top_demand_growth_quarterly.index[i]} {change[top_demand_growth_quarterly.index[i]]} by {top_demand_growth_quarterly.values[i][0]}%.\") \n",
+    "        i += 1\n",
+    "        if i >= len(top_demand_growth_quarterly):\n",
+    "            break \n",
+    "    \n",
+    "    if sum(top_demand_growth_quarterly.values < 0)[0] == 1:\n",
+    "        p.add_run(f\" On the other hand, {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-1].lower()} {change[top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-1]]} by {abs(top_demand_growth_quarterly.values[-1][0])}%.\")\n",
+    "    elif sum(top_demand_growth_quarterly.values < 0)[0] == 2:\n",
+    "        p.add_run(f\" On the other hand, {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-1].lower()} and {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-2].lower()} {change[top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-2]]} by {abs(top_demand_growth_quarterly.values[-1][0])}% and {abs(top_demand_growth_quarterly.values[-2][0])}%, respectively.\")\n",
+    "    elif sum(top_demand_growth_quarterly.values < 0)[0] == 3:\n",
+    "        p.add_run(f\" On the other hand, {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-1].lower()}, {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-2].lower()}, as well as  {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-3].lower()}, {change[top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values < 0].index[-3]]} by {abs(top_demand_growth_quarterly.values[-1][0])}%, {abs(top_demand_growth_quarterly.values[-2][0])}%, and {abs(top_demand_growth_quarterly.values[-3][0])}%, respectively.\")\n",
+    "\n",
+    "    if sum(top_demand_growth_quarterly.values == 0)[0] > 0:\n",
+    "        p.add_run(f\" Meanwhile, {top_demand_growth_quarterly.loc[top_demand_growth_quarterly.values == 0].index[-1].lower()} was flat over the same period.\")\n",
+    "\n",
+    "\n",
+    "    # change = {}\n",
+    "    # for item in df_gdp_growth_quarterly.columns:\n",
+    "    #     # Set placeholders\n",
+    "    #     if df_gdp_growth_quarterly[f'{item}'].last('2Q').values[-1] > df_gdp_growth_quarterly[f'{item}'].last('2Q').values[-2]:\n",
+    "    #         change[f'{item}'] = random.choice(['improved', 'increased', 'jumped'])\n",
+    "    #     elif df_gdp_growth_quarterly[f'{item}'].last('2Q').values[-1] == df_gdp_growth_quarterly[f'{item}'].last('2Q').values[-2]:\n",
+    "    #         change[f'{item}'] = random.choice(['kept still', 'stayed flat'])\n",
+    "    #     else:\n",
+    "    #         change[f'{item}'] = random.choice(['worsened', 'declined', 'fell'])\n",
+    "    # p = doc.add_heading(f\"Output {'contracted' if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1] < 0 else 'expanded'} in Q{df_gdp_growth_quarterly.last('2Q').index[-1].quarter} {df_gdp_growth_quarterly.last('2Q').index[-1].year}\", level=1)\n",
+    "    # p = doc.add_paragraph(f\"Output {'plunged' if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1] < 0 else 'jumped'} by {abs(df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1])}% year-on-year in Q{df_gdp_growth_quarterly.last('2Q').index[-1].quarter} of {df_gdp_growth_quarterly.last('2Q').index[-1].year}. Growth in overall economic activity {change['GDP growth']} from {'a contraction of ' + str(abs(df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2])) if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2] < 0 else df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2]}% in the previous quarter.\")\n",
+    "    # for item in demand_components:\n",
+    "    #     if item in df_gdp_growth_quarterly.columns:\n",
+    "    #         p.add_run(f\" {item} growth {change[item]} from {df_gdp_growth_quarterly[item].last('2Q').values[-2]}% to {df_gdp_growth_quarterly[item].last('2Q').values[-1]}%.\")\n",
+    "    p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,22 +743,22 @@
     "                                                      'Electricity, gas, steam and air conditioning supply']):\n",
     "        p = doc.add_heading(f\"Industrial output {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'}\", level=2)\n",
     "        p = doc.add_paragraph(f\"Industrial production {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'} by {abs(df_production['Industrial production'].values[-1])}% year-on-year in {calendar.month_name[df_production.index[-1].month]}, a{'n increase' if df_production['Industrial production'].values[-1] > df_production['Industrial production'].values[-2] else 'decrease'} from {df_production['Industrial production'].values[-2]}% growth in the previous month. Looking at the details, growth in manufacturing {change_production['Manufacturing']} to {df_production['Manufacturing'].values[-1]}% from {df_production['Manufacturing'].values[-2]}%, while mining and quarrying output growth {change_production['Mining and quarrying']} to {df_production['Mining and quarrying'].values[-1]}% from {df_production['Mining and quarrying'].values[-2]}%. Meanwhile, growth in water supply, sewerage, waste management & remediation {change_production['Water supply, sewerage, waste management & remediation']} to {df_production['Water supply, sewerage, waste management & remediation'].values[-1]}% from {df_production['Water supply, sewerage, waste management & remediation'].values[-2]}%, while electricity, gas, steam and air conditioning supply output growth {change_production['Electricity, gas, steam and air conditioning supply']} to {df_production['Electricity, gas, steam and air conditioning supply'].values[-1]}% from {df_production['Electricity, gas, steam and air conditioning supply'].values[-2]}%\")\n",
-    "    elif 'Industrial production' and 'Manufacturing' in df_production.columns:\n",
+    "    elif all(item in df_production.columns for item in ['Industrial Production', 'Manufacturing']):\n",
     "        p = doc.add_heading(f\"Industrial output growth {change_production['Industrial production']}\", level=2)\n",
     "        p = doc.add_heading(f\"Industrial output {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'}\", level=2)\n",
     "        p = doc.add_paragraph(f\"Industrial production {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'} by {abs(df_production['Industrial production'].values[-1])}% year-on-year in {calendar.month_name[df_production.index[-1].month]}, a{'n increase' if df_production['Industrial production'].values[-1] > df_production['Industrial production'].values[-2] else 'decrease'} from {df_production['Industrial production'].values[-2]}% growth in the previous month. Growth in manufacturing {change_production[f'{item}']} to {df_production['Manufacturing'].values[-1]}% from {df_production['Manufacturing'].values[-2]}%.\")\n",
     "    elif 'Industrial production' in df_production.columns:\n",
     "        p = doc.add_heading(f\"Industrial output {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'}\", level=2)\n",
     "        p = doc.add_paragraph(f\"Industrial production {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'} by {abs(df_production['Industrial production'].values[-1])}% year-on-year in {calendar.month_name[df_production.index[-1].month]}, a{'n increase' if df_production['Industrial production'].values[-1] > df_production['Industrial production'].values[-2] else 'decrease'} from {df_production['Industrial production'].values[-2]}% growth in the previous month.\")\n",
-    "    elif 'Manufacturing' in df_production.colums:\n",
-    "        p = doc.add_heading(f\"Industrial output {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'}\", level=2)\n",
+    "    elif 'Manufacturing' in df_production.columns:\n",
+    "        p = doc.add_heading(f\"Industrial output {'shrank' if df_production['Manufacturing'].values[-1] < 0 else 'expanded'}\", level=2)\n",
     "        p = doc.add_paragraph(f\"Manufacturing {'shrank' if df_production['Manufacturing'].values[-1] < 0 else 'expanded'} by {abs(df_production['Manufacturing'].values[-1])}% year-on-year in {calendar.month_name[df_production.index[-1].month]}, a{'n increase' if df_production['Manufacturing'].values[-1] > df_production['Manufacturing'].values[-2] else 'decrease'} from {df_production['Manufacturing'].values[-2]}% growth in the previous month.\")\n",
     "    p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
