--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,31 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "{'GDP growth': 'contracted',\n",
-       " 'Private consumption': 'declined',\n",
-       " 'Government expenditure': 'increased',\n",
-       " 'Gross capital formation': 'declined',\n",
-       " 'Net exports': 'declined'}"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 52
-    }
-   ],
-   "source": [
-    "change"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +718,7 @@
     "                                                      'Water supply, sewerage, waste management & remediation',\n",
     "                                                      'Electricity, gas, steam and air conditioning supply']):\n",
     "        p = doc.add_heading(f\"Industrial output {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'}\", level=2)\n",
-    "        p = doc.add_paragraph(f\"Industrial production {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'} by {abs(df_production['Industrial production'].values[-1])}% year-on-year in {calendar.month_name[df_production.index[-1].month]}, a{'n increase' if df_production['Industrial production'].values[-1] > df_production['Industrial production'].values[-2] else 'decrease'} from {df_production['Industrial production'].values[-2]}% growth in the previous month. Looking at the details, growth in manufacturing {change_production['Manufacturing']} to {df_production['Manufacturing'].values[-1]}% from {df_production['Manufacturing'].values[-2]}%, while mining and quarrying output growth {change_production['Mining and quarrying']} to {df_production['Mining and quarrying'].values[-1]}% from {df_production['Mining and quarrying'].values[-2]}%. Meanwhile, growth in water supply, sewerage, waste management & remediation {change_production['Water supply, sewerage, waste management & remediation']} to {df_production['Water supply, sewerage, waste management & remediation'].values[-1]}% from {df_production['Water supply, sewerage, waste management & remediation'].values[-2]}%, while electricity, gas, steam and air conditioning supply output growth {change_production['Electricity, gas, steam and air conditioning supply']} to {df_production['Electricity, gas, steam and air conditioning supply'].values[-1]}% from {df_production['Electricity, gas, steam and air conditioning supply'].values[-2]}%\")\n",
+    "        p = doc.add_paragraph(f\"Industrial production {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'} by {abs(df_production['Industrial production'].values[-1])}% year-on-year in {calendar.month_name[df_production.index[-1].month]}, a{'n increase' if df_production['Industrial production'].values[-1] > df_production['Industrial production'].values[-2] else ' decrease'} from {df_production['Industrial production'].values[-2]}% growth in the previous month. Looking at the details, growth in manufacturing {change_production['Manufacturing']} to {df_production['Manufacturing'].values[-1]}% from {df_production['Manufacturing'].values[-2]}%, while mining and quarrying output growth {change_production['Mining and quarrying']} to {df_production['Mining and quarrying'].values[-1]}% from {df_production['Mining and quarrying'].values[-2]}%. Meanwhile, growth in water supply, sewerage, waste management & remediation {change_production['Water supply, sewerage, waste management & remediation']} to {df_production['Water supply, sewerage, waste management & remediation'].values[-1]}% from {df_production['Water supply, sewerage, waste management & remediation'].values[-2]}%, while electricity, gas, steam and air conditioning supply output growth {change_production['Electricity, gas, steam and air conditioning supply']} to {df_production['Electricity, gas, steam and air conditioning supply'].values[-1]}% from {df_production['Electricity, gas, steam and air conditioning supply'].values[-2]}%\")\n",
     "    elif all(item in df_production.columns for item in ['Industrial Production', 'Manufacturing']):\n",
     "        p = doc.add_heading(f\"Industrial output growth {change_production['Industrial production']}\", level=2)\n",
     "        p = doc.add_heading(f\"Industrial output {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'}\", level=2)\n",
@@ -758,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,15 +776,28 @@
     "        else:\n",
     "            change[f'{item}'] = random.choice(['eased', 'decreased', 'lowered'])\n",
     "\n",
-    "    p = doc.add_paragraph(f\"{country_codes.country_name[country]}'s central bank {change['Policy rate (EOP, monthly, %)']} the official policy rate to {df_policyrate_monthly['Policy rate (EOP, monthly, %)'].values[-1]}% in {calendar.month_name[df_policyrate_monthly.index[-1].month]} from {df_policyrate_monthly['Policy rate (EOP, monthly, %)'].values[-2]}% in {calendar.month_name[df_policyrate_monthly.index[-1].month - 1]}.\")\n",
+    "    p = doc.add_paragraph(f\"{country_codes.country_name[country]}'s central bank {change['Policy rate (EOP, monthly, %)']} the official policy rate to {df_policyrate_monthly['Policy rate (EOP, monthly, %)'].values[-1]}% in {calendar.month_name[df_policyrate_monthly.index[-1].month]} from {str(df_policyrate_monthly['Policy rate (EOP, monthly, %)'].values[-2]) + '%' if df_policyrate_monthly['Policy rate (EOP, monthly, %)'].values[-1] != df_policyrate_monthly['Policy rate (EOP, monthly, %)'].values[-2] else 'the same'} in {calendar.month_name[df_policyrate_monthly.index[-1].month - 1]}.\")\n",
     "    p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'forecast_inf_current'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-5486a3b5cbd7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0malignment\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mWD_ALIGN_PARAGRAPH\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mJUSTIFY\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdoc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_paragraph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Consensus Economics panelists foresee {country_codes.country_name[country]}'s inflation ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_inf_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1} and {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 2}, the panelists project inflation at {country_codes[country_codes.index==country].forecast_inf_1step[0].round(1)}% and {country_codes[country_codes.index==country].forecast_inf_2step[0].round(1)}%, respectively.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;31m# Add a paragraph on Risks\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5134\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5135\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5136\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5137\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5138\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'forecast_inf_current'"
+     ]
+    }
+   ],
    "source": [
     "# # Add a paragraph on Fiscal policy\n",
     "# p = doc.add_paragraph('Fiscal policy', style='List Number')\n",
@@ -826,6 +815,8 @@
     "p = doc.add_heading(f\"Outlook {'tilted downwards' if country_codes[country_codes.index==country].forecast_gdp_current[0].round(1) < 0 else 'favorable'} this year\")\n",
     "p = doc.add_paragraph(f\"On {country_codes[country_codes.index==country].forecast_date[0]}, Consensus Economics panelists project {country_codes.country_name[country]}'s economic growth ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_gdp_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1} and {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 2}, the panelists foresee growth at {country_codes[country_codes.index==country].forecast_gdp_1step[0].round(1)}% and {country_codes[country_codes.index==country].forecast_gdp_2step[0].round(1)}%, respectively.\")\n",
     "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
+    "\n",
+    "p = doc.add_paragraph(f\"Consensus Economics panelists foresee {country_codes.country_name[country]}'s inflation ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_inf_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1} and {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 2}, the panelists project inflation at {country_codes[country_codes.index==country].forecast_inf_1step[0].round(1)}% and {country_codes[country_codes.index==country].forecast_inf_2step[0].round(1)}%, respectively.\")\n",
     "\n",
     "# Add a paragraph on Risks\n",
     "# p = doc.add_paragraph('Risks', style='List Number')\n",
